Fix actions visibility issue

--- a/application/client/src/app/ui/tabs/sources/common/actions/styles.less
+++ b/application/client/src/app/ui/tabs/sources/common/actions/styles.less
@@ -5,7 +5,6 @@
     position: relative;
     display: block;
     width: 100%;
-    overflow: hidden;
     & mat-card {
         margin: 12px 6px 12px 12px;
         & mat-card-content {
